# kicad_firmware_generation

./: .gitignore  AUTHORS  LICENSE  Makefile  README.md  example_snippet_map.json  main.py  pyproject.toml
code_gen/: code_gen.py  snippet_sheet.py
common_types/: group_types.py  parse_xml.py  snippet_types.py  snippet_xml.py  stringify_xml.py
example/: README.md
example/schematics/: LED.kicad_sch
group_many_to_many_mapper/: group_many_to_many_mapper.py
group_netlist_merger/: group_netlist_merger.py
group_one_to_many_mapper/: group_one_to_many_mapper.py
kicad_group_netlister/: kicad_group_netlister.py  kicad_netlist_xml.py  kicad_types.py
kicad_snippet_mapper/: intermediate_types.py  kicad_snippet_mapper.py  kicad_types.py  netlist_xml.py
kicad_snippet_netlister/: kicad_netlist_xml.py  kicad_snippet_netlister.py  kicad_types.py
map_to_csv/: map_to_csv.py
netlist_to_csv/: netlist_to_csv.py
snippet_many_to_many_mapper/: snippet_many_to_many_mapper.py
snippet_map/: snippet_map_xml.py  snippet_types.py
snippet_mapper/: snippet_mapper.py
snippet_one_to_many_mapper/: snippet_one_to_many_mapper.py
