[project]
name = "kicad_code_gen"
version = "0.1.0"
dependencies = [
    # TODO: version
    "jinja2",
]
# TODO: possibly older version
requires-python = ">3.13"
authors = [
    {name = "Christopher Besch", email = "mail@chris-besch.com"}
]
maintainers = [
    {name = "Christopher Besch", email = "mail@chris-besch.com"}
]
# TODO
description = ""
# TODO
# license = ""
readme = "README.md"
license-files = ["LICENSE"]
# TODO
keywords = []

[tool.setuptools]
packages = ["kicad_snippet_netlister", "snippet_one_to_many_mapper", "snippet_many_to_many_mapper", "code_gen", "common_types", "map_to_csv"]

[project.scripts]
kicad_snippet_netlister = "kicad_snippet_netlister.kicad_snippet_netlister:main"
snippet_one_to_many_mapper = "snippet_one_to_many_mapper.snippet_one_to_many_mapper:main"
snippet_many_to_many_mapper = "snippet_many_to_many_mapper.snippet_many_to_many_mapper:main"
code_gen = "code_gen.code_gen:main"
map_to_csv = "map_to_csv.map_to_csv:main"
