[project]
name = "kicad_code_gen"
version = "0.1.0"
dependencies = [
    # TODO: version
    "jinja2",
]
# TODO: possibly older version
requires-python = ">3.13"
authors = [
    {name = "Christopher Besch", email = "mail@chris-besch.com"}
]
maintainers = [
    {name = "Christopher Besch", email = "mail@chris-besch.com"}
]
# TODO
description = ""
# TODO
# license = ""
readme = "README.md"
license-files = ["LICENSE"]
# TODO
keywords = []

[tool.setuptools]
packages = ["kicad_group_netlister", "code_gen", "common_types", "netlist_to_csv", "group_netlist_merger"]

[project.scripts]
kicad_group_netlister = "kicad_group_netlister.kicad_group_netlister:main"
code_gen = "code_gen.code_gen:main"
netlist_to_csv = "netlist_to_csv.netlist_to_csv:main"
group_netlist_merger = "group_netlist_merger.group_netlist_merger:main"
